--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
     "clsx": "^2.1.1",
+    "find-cache-dir": "^5.0.0",
     "framer-motion": "^11.3.21",
     "next": "^14.2.5",
-    "next-on-netlify": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "simplex-noise": "^4.0.3",
